# Gautlet

./: .gitignore  00_README.md  01_MASTER_EXECUTION_PROMPT.md  02_PRODUCT_VISION.md  03_PRD.md  04_SYSTEM_ARCHITECTURE.md  05_DOMAIN_MODEL_AND_SCHEMAS.md  06_EVALUATION_ENGINE.md  07_AGENT_EVALUATION_PACK.md  08_PLUGIN_SDK.md  09_SECURITY_AND_THREAT_MODEL.md  10_REPORTING_AND_SCORING.md  11_CLI_AND_DEVELOPER_EXPERIENCE.md  12_TESTING_AND_ACCEPTANCE.md  13_IMPLEMENTATION_ROADMAP.md  14_ADR_TEMPLATE.md  15_OPEN_QUESTIONS.md  16_VERDICT_AND_IMPLEMENTATION_PLAN.md  HANDOFF.md  REPOSITORY_TREE.txt  pyproject.toml  spec_manifest.json
.github/workflows/: ci.yml
benchmarks/agent_mvp/: manifest.yaml  scoring.yaml
docs/: quickstart.md
docs/adr/: ADR-001-files-only-persistence.md  ADR-002-subprocess-jsonl-adapter-protocol.md  ADR-003-injected-tool-registry.md  ADR-004-reproducibility-claims.md  (+2 more)
examples/: __init__.py
reviews/: M0.md  M1.md  M2.md  M3.md  M4.md  M5.md  RC1-codex-review.md
scripts/: release_gate.py
tests/: adapter_target.py  test_adapter_protocol.py  test_agent_mvp_pack.py  test_artifact_store.py  test_assertion_engine.py  test_benchmark_loader.py  test_builtin_benchmark.py  test_cli.py  test_cli_m1.py  test_cli_m5.py  test_compare.py  test_config_loader.py  test_doctor.py  test_evidence_store.py  test_inspection.py  test_metric_collectors.py  test_models.py  test_mvp_acceptance.py  test_orchestration.py  test_python_callable_adapter.py  test_reporting_pipeline.py  test_sample_agent.py  test_scenario_executor.py  test_scoring_engine.py
(+73 files in other folders)
