[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "gauntlet"
dynamic = ["version"]
description = "Local-first, evidence-backed evaluation for agentic AI systems"
readme = "00_README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23,<5",
    "pydantic>=2,<3",
    "PyYAML>=6,<7",
    "rich>=13,<15",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14,<2",
    "pytest>=8,<10",
    "types-jsonschema>=4.23,<5",
    "types-PyYAML>=6,<7",
    "ruff>=0.9,<1",
]

[project.scripts]
gauntlet = "gauntlet.cli:app"

[tool.hatch.version]
path = "src/gauntlet/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/gauntlet"]

[tool.hatch.build.targets.wheel.force-include]
"benchmarks/agent_mvp" = "gauntlet/benchmarks/agent_mvp"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
pretty = true
show_error_codes = true
